changed eventdetailviewmodel and screen so that test for this viewmodel passes